[gd_scene load_steps=10 format=3 uid="uid://b5divcs7f3it6"]

[ext_resource type="Script" uid="uid://b3n8fjpkijko1" path="res://scene/unit/player_unit.gd" id="1_8ayyg"]
[ext_resource type="Texture2D" uid="uid://d3t7be8jqq4sk" path="res://assets/character/Warrior_Idle.png" id="1_ty0gu"]
[ext_resource type="Script" uid="uid://b0u0xwmup34dm" path="res://scene/component/health/health_component.gd" id="2_8ayyg"]
[ext_resource type="Script" uid="uid://tv4n1ayf4t6e" path="res://scene/component/attack_component.gd" id="3_6tgj7"]
[ext_resource type="Script" uid="uid://bn82716h17xjf" path="res://scene/component/hurt/hurt_component.gd" id="4_do6rp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kqkab"]
atlas = ExtResource("1_ty0gu")
region = Rect2(62, 48, 79, 89)

[sub_resource type="CircleShape2D" id="CircleShape2D_ty0gu"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8ayyg"]
radius = 121.0661

[sub_resource type="CircleShape2D" id="CircleShape2D_6tgj7"]
radius = 24.0

[node name="PlayerUnit" type="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_8ayyg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -36)
texture = SubResource("AtlasTexture_kqkab")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -24)
shape = SubResource("CircleShape2D_ty0gu")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_8ayyg")
metadata/_custom_type_script = "uid://b0u0xwmup34dm"

[node name="AttackComponent" type="Area2D" parent="."]
script = ExtResource("3_6tgj7")
enemy_groups = Array[String](["ground_enemy"])
metadata/_custom_type_script = "uid://tv4n1ayf4t6e"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent"]
shape = SubResource("CircleShape2D_8ayyg")
debug_color = Color(0.6759988, 0.47235125, 0.5006987, 0.41960785)

[node name="HurtComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("4_do6rp")
metadata/_custom_type_script = "uid://bn82716h17xjf"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(-4, -24)
shape = SubResource("CircleShape2D_6tgj7")
debug_color = Color(0.93549144, 0.1556527, 0.50861675, 0.41960785)
